# ai-for-good

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/agents/: README.md  _agentspec_README.md  _template.md
.claude/agents/ai-ml/: dynamis-geo-architect.md  satellite-data-engineer.md
.claude/agents/domain/: crop-classifier.md  submission-builder.md
.claude/commands/core/: memory.md  readme-maker.md  sync-context.md
.claude/commands/submit/: package-submission.md
.claude/commands/train/: run-baseline.md  run-dynamis.md
.claude/commands/workflow/: brainstorm.md  build.md  define.md  design.md  iterate.md  ship.md
.claude/kb/: _index.yaml
.claude/kb/_templates/: concept.md.template  (+1 more)
.claude/sdd/: README.md  _index.md
.claude/storage/: .gitkeep
background/benchmarking/: CropWatch Project - China.txt
background/result_track1/: result_email.txt
docs/: SOLUTION_DESIGN.md
notebooks/: 00_colab_setup.ipynb  02_baseline_vs_dynamis.ipynb  02_baseline_vs_dynamis_v1.ipynb  02_baseline_vs_dynamis_v2.ipynb  02_baseline_vs_dynamis_v4.ipynb
src/: __init__.py
src/data/: __init__.py  folder_consolidator.py  phenology_features.py  point_extractor.py  sample_strategy.py  sentinel2_loader.py  temporal_builder.py  vegetation_indices.py
src/dynamis/: __init__.py  chaos_attention.py  dynamis_core.py  hurst_geo.py  innovation_loss.py  phenology_prior.py
src/models/: __init__.py  dynamis_crop_classifier.py
src/submission/: __init__.py
src/training/: __init__.py  calibration.py
tests/: test_dynamis_modules.py
(+49 files in other folders)
